// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoJMP eNWZxb"
>
  <li
    className="sc-fzoYHE exKGdD"
    onClick={[Function]}
  >
    <span
      className="sc-fzomME iFHAjG"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoYHE exKGdD"
    onClick={[Function]}
  >
    <span
      className="sc-fzomME iFHAjG"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoYHE exKGdD"
    onClick={[Function]}
  >
    <span
      className="sc-fzomME iFHAjG"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoJMP eNWZxb"
>
  <li
    className="sc-fzoYHE bWwtsL"
    onClick={[Function]}
  >
    <span
      className="sc-fzomME iFHAjG"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzoYHE bWwtsL"
    onClick={[Function]}
  >
    <span
      className="sc-fzomME iFHAjG"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzoYHE bWwtsL"
    onClick={[Function]}
  >
    <span
      className="sc-fzomME iFHAjG"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
